Cleanup stylesheets, fix sign up form on mobile.
- Reset answers when starting the quiz
- Format and cleanup conflicting styles

--- a/src/theme/_correct.scss
+++ b/src/theme/_correct.scss
@@ -3,7 +3,7 @@
     font-size: 1.8em;
   }
 
-  ion-button.skip{
+  ion-button.skip {
     font-size: 1.8em;
   }
 }
@@ -40,7 +40,7 @@
   text-transform: uppercase;
   margin: 0;
 
-  @media only screen and (min-width: 700px){
+  @media only screen and (min-width: 700px) {
     font-size: 7.5vh;
   }
 }
@@ -61,13 +61,13 @@
   align-items: center;
   font-weight: bold;
   transition-duration: 0.4s;
-  margin-right:3%;
+  margin-right: 3%;
 }
 
-.q-response{
+.q-response {
   font-size: 2.3vh;
   justify-content: center;
-  align-self:center;
+  align-self: center;
   text-align: center;
 }
 
@@ -81,7 +81,7 @@
 
 .correct-button {
   --background: #{$gygb-green};
-  --background-hover: #A2ED47;
+  --background-hover: #a2ed47;
   width: fit-content;
   font-size: 2.65vh;
   letter-spacing: 2px;
